trunk/Archive2/57/dcbc19c362da8a/output
main.cpp:6:26: error: 'const' qualifiers cannot be applied to 'const T* const& {aka const int* const&}'
 void k(T const * const & const);
                          ^
